--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_top_constraint">52dp</dimen>
+    <dimen name="margin_top_imagen">64dp</dimen>
 </resources>
