--- a/app/src/main/res/menu/fragment_lista_menu.xml
+++ b/app/src/main/res/menu/fragment_lista_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/mnuSave"
+        android:id="@+id/action_listaFragment_to_agregarFragment"
         android:title="@string/agregar_mnu_title"
         android:icon="@drawable/ic_add_white_24dp"
         app:showAsAction="ifRoom|withText"/>
     <item
-        android:id="@+id/mnuOptions"
+        android:id="@+id/action_listaFragment_to_preferenciasFragment"
         android:title="@string/titulo_mnu_preferencias"
         app:showAsAction="never"/>
 </menu>
