--- a/app/src/main/res/layout/item_libro.xml
+++ b/app/src/main/res/layout/item_libro.xml
@@ -4,24 +4,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.agregar.AgregarFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgPortada"
-            android:layout_width="89dp"
-            android:layout_height="140dp"
+            android:layout_width="84dp"
+            android:layout_height="74dp"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
+            android:contentDescription="@string/description_img_portada"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars"
-            android:contentDescription="@string/description_img_portada" />
+            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/lblTitulo"
