--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -17,10 +17,21 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_listaFragment_to_preferenciasFragment"
+            app:destination="@id/preferenciasFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/agregarFragment"
         android:name="es.iessaladillo.maria.mmcsr_libros.ui.agregar.AgregarFragment"
         android:label="fragment_agregar"
         tools:layout="@layout/fragment_agregar" />
+    <fragment
+        android:id="@+id/preferenciasFragment"
+        android:name="es.iessaladillo.maria.mmcsr_libros.ui.preferencias.PreferenciasFragment"
+        android:label="PreferenciasFragment" />
 </navigation>
