--- a/app/src/main/res/xml/preferencias.xml
+++ b/app/src/main/res/xml/preferencias.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <CheckBoxPreference
+        android:defaultValue="@bool/prefSync_defaultValue"
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:key="@string/prefSync_key"
+        android:summaryOff="@string/prefSync_summaryOff"
+        android:summaryOn="@string/prefSync_summaryOn"
+        android:title="@string/prefSync_title"/>
 
 </PreferenceScreen>
